--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
         </div>
         <div class="w-1/2 flex justify-center items-center">
           <img
-            src="public/images/about.svg"
+            src="public/images/about.png"
             alt="about-img"
             class="rounded-lg shadow-md"
           />
@@ -435,7 +435,7 @@
     <section
       class="py-20 mt-10 min-h-screen"
       id="subscribe"
-      style="background-image: url(public/images/subscribe.svg)"
+      style="background-image: url(public/images/subscribe.png)"
     >
       <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2 mb-10">
         <h1 class="text-3xl text-center font-bold">Subscribe</h1>
